fix horizontal scroll

--- a/styles.scss
+++ b/styles.scss
@@ -28,8 +28,7 @@ body {
         margin-left: auto;
         margin-right: auto;
         width: 65vw;
-        min-width: 700px;
-        max-width: 100vw;
+        min-width: 650px;
     }
 }
 
